# jobkit

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_scraper.py
.github/: STARTER_ISSUES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: _config.yml  index.md
src/jobkit/: __init__.py  cli.py  config.py
src/jobkit/exporters/: __init__.py  pdf.py
src/jobkit/generators/: __init__.py  cover_letter.py  llm.py  resume.py
src/jobkit/importers/: __init__.py  file_parser.py  github_profile.py  linkedin_profile.py
src/jobkit/scrapers/: __init__.py  base.py  linkedin.py
src/jobkit/web/: __init__.py  app.py
src/jobkit/web/templates/: application_detail.html  base.html  import_status.html  index.html  job_detail.html  jobs.html  profile.html  search.html  settings.html
tests/: __init__.py  test_config.py  test_generators.py
