[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobkit"
version = "0.1.1"
description = "Open source job hunting toolkit - search jobs, generate tailored resumes and cover letters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JobKit Contributors"}
]
keywords = ["job-search", "resume", "cover-letter", "linkedin", "automation", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "playwright>=1.40.0",
    "flask>=3.0.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.5.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
jobkit = "jobkit.cli:main"

[project.urls]
Homepage = "https://rockly-dao.github.io/jobkit"
Documentation = "https://rockly-dao.github.io/jobkit"
Repository = "https://github.com/rockly-dao/jobkit"
Issues = "https://github.com/rockly-dao/jobkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobkit = ["web/templates/*.html", "web/static/**/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
